--- a/css/styles.css
+++ b/css/styles.css
@@ -196,6 +196,9 @@ p.headerptag{
 .contactinput{
 	width: 85%;
 	margin-right: 0px;
+	border: 1px solid #ccc;
+    	border-radius: 4px;
+    	padding: 5px;
 
 }
 
